<resources>
    <string name="app_name">Wagba</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pawword">Password</string>
    <string name="Confirm">Confirm Password</string>
    <string name="login">login</string>
    <string name="sign">sign up</string>
    <string name="forget">Forget your password</string>
    <string name="signup">Don\'t have an account? Signup</string>
    <string name="account_exists">Already have an account? sign in </string>
    <string name="phone_number">phone number</string>
    <string name="title">Title</string>
    <string name="details">details</string>
    <string name="deliver_fee">Deliver Fee</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">add to cart</string>
    <string name="price">Price</string>
    <string name="back">back button</string>
    <string name="cart">Cart</string>
    <string name="order_details">Order Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="cart_total">Cart Total</string>
    <string name="place_order">Place Order</string>
    <string name="total_price">Total</string>
    <string name="checkout">Checkout</string>
    <string name="check_out">Check out</string>
    <string name="pick_up_gate">Pick Up Gate</string>
    <string name="add_btn">add_btn</string>
    <string name="remove_btn">remove_btn</string>
    <string name="number">number</string>
    <string name="time_to_order2">3:00 pm</string>
    <string name="gate_3">Gate 3</string>
    <string name="gate_4">Gate 4</string>
    <string name="time_to_order">12:00 pm</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="order_status">order status</string>
    <string name="order_date">order date</string>
    <string name="id">id</string>
    <string name="order_id">Order ID:</string>
    <string name="my_orders">My Orders</string>
    <string name="forward_btn">view order</string>
    <string name="EGP">EGP</string>
    <string name="order_summary">Order Summary</string>
    <string name="on_its_way">On its way</string>
    <string name="prepare_order">Prepare Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="delivered">Delivered</string>
    <!--    <string name="please_state_any_note_related_to_order">Please, be noted there is only  two delivery times 12:00 noon and 3:00 pm any for now you are required to place order 2 hour earlier 10:00 am to deliver order at 12:00 noon &amp; 1:00pm to deliver order at 3:00 pm</string>-->
    <string name="please_state_any_note_related_to_order">place order at 10:00 am to deliver order at 12:00 noon &amp; or at 1:00pm to deliver order at 3:00 pm</string>
    <string name="notes">Notes</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="mighty_zingear">mighty zingear</string>
    <string name="your_card_is_empty">Your card is Empty</string>
    <string name="you_can_view_restaurants_from_home">you can view restaurants from home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>