<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkoffwhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:keepScreenOn="true"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="never"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollHorizontally="false"
                android:text="@string/check_out"
                android:textColor="@color/yellow"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/check_out_restaurant_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkout"
                android:gravity="center_horizontal"
                android:overScrollMode="never"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pick_up_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_out_restaurant_title"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/location_icon"
                android:text="@string/pick_up_time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pick_up_time_title"
                android:layout_alignStart="@id/pick_up_time_title"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layoutDirection="rtl">

                <RadioButton
                    android:id="@+id/AM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_select"
                    android:button="@drawable/radio_button"
                    android:checked="false"
                    android:includeFontPadding="false"
                    android:layoutDirection="inherit"
                    android:padding="5dp"
                    android:text="@string/time_to_order" />

                <RadioButton
                    android:id="@+id/PM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_select"
                    android:button="@drawable/radio_button"
                    android:checked="false"
                    android:layoutDirection="rtl"
                    android:padding="5dp"
                    android:text="@string/time_to_order2" />

            </RadioGroup>

            <TextView
                android:id="@+id/pick_up_gate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group_time"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/location_icon"
                android:text="@string/pick_up_gate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_gate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pick_up_gate_title"
                android:layout_alignStart="@id/pick_up_time_title"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/Gate_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_select"
                    android:button="@drawable/radio_button"
                    android:layoutDirection="rtl"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/gate_3" />

                <RadioButton
                    android:id="@+id/Gate_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_select"
                    android:button="@drawable/radio_button"
                    android:duplicateParentState="false"
                    android:focusable="auto"
                    android:layoutDirection="rtl"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/gate_4" />

            </RadioGroup>

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:layout_alignTop="@id/pick_up_time_title"
                android:layout_alignBottom="@id/pick_up_time_title"
                android:background="@drawable/icon_bg"
                android:cropToPadding="false"
                android:padding="3dp"
                app:srcCompat="@drawable/clock" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="29dp"
                android:layout_height="27dp"
                android:layout_alignTop="@id/pick_up_gate_title"
                android:layout_alignBottom="@id/pick_up_gate_title"
                android:layout_marginEnd="5dp"
                android:background="@drawable/icon_bg"
                android:cropToPadding="false"
                android:padding="3dp"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radio_group_gate"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_title"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/please_state_any_note_related_to_order"
                android:inputType="textLongMessage"
                android:minHeight="50dp"
                android:padding="5dp"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notes"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:overScrollMode="always">

                <TextView
                    android:id="@+id/payment_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/payment_details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/payment_details"
                    android:layout_alignStart="@id/payment_details"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cart_total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cart_total_egp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/check_out__cart_price"
                    android:layout_alignBottom="@id/check_out__cart_price"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="false"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/check_out__cart_price"
                    android:gravity="center"
                    android:text="@string/EGP"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/delivery_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cart_total"
                    android:layout_alignStart="@id/payment_details"
                    android:layout_marginTop="10dp"
                    android:text="@string/deliver_fee"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/check_out__cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/payment_details"
                    android:layout_alignEnd="@id/payment_details"
                    android:layout_alignBottom="@id/cart_total"
                    android:layout_alignParentEnd="false"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/delivery_fee_egp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/check_out__delivery_price"
                    android:layout_alignBottom="@id/check_out__delivery_price"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="false"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/check_out__delivery_price"
                    android:gravity="center"
                    android:text="@string/EGP"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/check_out__delivery_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/check_out__cart_price"
                    android:layout_alignEnd="@id/payment_details"
                    android:layout_alignBottom="@id/delivery_fee"
                    android:layout_alignParentEnd="false"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line_pay2"
                    android:layout_alignStart="@id/delivery_fee"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_price"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/check_out_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/check_out__delivery_price"
                    android:layout_alignEnd="@id/check_out__cart_price"
                    android:layout_alignBottom="@id/Total_price"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_egp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/check_out_total_price"
                    android:layout_alignBottom="@id/check_out_total_price"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="false"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/check_out_total_price"
                    android:gravity="center"
                    android:text="@string/EGP"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/place_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/check_out_total_price"
                    android:layout_alignEnd="@id/check_out_total_price"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/yellow"
                    android:minHeight="48dp"
                    android:text="@string/place_order" />

                <View
                    android:id="@+id/line_pay"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/darkeroffwhite" />

                <View
                    android:id="@+id/line_pay2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/delivery_fee"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/darkeroffwhite" />
            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>

</ScrollView>