<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Cart">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/offwhite">

        <TextView
            android:id="@+id/Cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never"
            android:padding="10dp"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:text="@string/cart"
            android:textColor="@color/yellow"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resturant_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Cart"
            android:gravity="center_horizontal"
            android:overScrollMode="never"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/resturant_title"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/order_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/order_details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_details_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:overScrollMode="never"
                    tools:itemCount="2"
                    tools:listitem="@layout/add_to_card">

                </androidx.recyclerview.widget.RecyclerView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/payment_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/payment_details"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cart_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_details"
                        android:layout_alignStart="@id/payment_details"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cart_total"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/delivery_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cart_total"
                        android:layout_alignStart="@id/payment_details"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/deliver_fee"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/cart_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_details"
                        android:layout_alignEnd="@id/payment_details"
                        android:layout_alignBottom="@id/cart_total"
                        android:layout_alignParentEnd="false"
                        android:layout_alignParentRight="false"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/restaurant_page_delivery_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cart_price"
                        android:layout_alignEnd="@id/payment_details"
                        android:layout_alignBottom="@id/delivery_fee"
                        android:layout_alignParentRight="false"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/Total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/restaurant_page_delivery_price"
                        android:layout_alignStart="@id/delivery_fee"
                        android:layout_marginTop="10dp"
                        android:text="@string/total_price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/restaurant_page_delivery_price"
                        android:layout_alignRight="@id/cart_price"
                        android:layout_alignBottom="@id/Total_price"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/check_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/total_price"
                        android:layout_alignEnd="@id/total_price"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:backgroundTint="@color/yellow"
                        android:text="@string/checkout" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</FrameLayout>